tests/errors/typecheck/test_tc_08_return_type_mismatch.pc
#import std.io;
string getName() {
    return 42;
}
int main() {
    string name = getName();
    return 0;
}
